package aisafe.aircrafts.domain;

/**
 * Represents the manufacturer of an aircraft.
 */
public enum Manufacturer {
    BOEING,
    AIRBUS,
    EMBRAER,
    BOMBARDIER,
    ATR,
    COMAC,
    SUKHOI,
    MITSUBISHI;
}
