package aisafe.airports.domain;

/**
 * Enumeration representing the operational status of an airport.
 */
public enum AirportStatus {
    OPERATIONAL,
    CLOSED,
    UNDER_MAINTENANCE
}
