package aisafe.airports.domain;

/**
 * Enumeration representing the type of contact information for an airport.
 */
public enum ContactType {
    PHONE,
    EMAIL,
    FAX,
    OTHER
}
