package aisafe.flights.domain;

public enum FlightStatus {
    SCHEDULED,
    DELAYED,
    IN_FLIGHT,
    COMPLETED,
    CANCELED

}
