package aisafe.maintenance.domain;

/**
 * Enumeration representing the different components of an aircraft that can be maintained.
 */
public enum MaintenanceComponent {
    ENGINE,
    AIRFRAME,
    AVIONICS,
    INTERIOR,
    EXTERIOR
}
