package aisafe.maintenance.domain;

/**
 * Enumeration representing the status of a maintenance task.
 */
public enum MaintenanceStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELED;
}
