package aisafe.security.domain;

/**
 * Enumeration representing the different roles that users can have in the system.
 */
public enum Role {
    ADMIN,
    BACKOFFICE_OPERATOR,
    ATCC,
    MAINTENANCE_TECHNICIAN,
    MAINTENANCE_SUPERVISOR
}
