package aisafe.security.domain;

import lombok.Getter;
import lombok.Setter;
import org.springframework.security.core.GrantedAuthority;
import org.springframework.security.core.authority.SimpleGrantedAuthority;
import org.springframework.security.core.userdetails.UserDetails;
import org.springframework.util.Assert;

import java.util.*;

/**
 * Represents a user in the system with authentication and authorization details.
 */
public class User implements UserDetails {
    @Getter
    private UUID userID;

    private String username;
    private String passwordHash;

    @Getter
    private Role role;

    protected User() {}

    public User(String username, String passwordHash, Role role) {
        Assert.hasText(username, "username must not be blank");
        Assert.hasText(passwordHash, "password must not be blank");
        Assert.notNull(role, "role must not be null");
        this.userID = UUID.randomUUID();
        this.username = username;
        this.passwordHash = passwordHash;
        this.role = role;
    }

    public void assignRole(Role role) { this.role = role; }

    public static User reconstitute(UUID userID, String username, String passwordHash, Role role) {
        User user = new User(username, passwordHash, role);
        user.userID = userID;
        return user;
    }

    @Override
    public Collection<? extends GrantedAuthority> getAuthorities() {
        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
    }

    @Override
    public String getPassword() {
        return this.passwordHash;
    }

    @Override
    public String getUsername() {
        return this.username;
    }

    public boolean isAccountNonExpired() {
        return true;
    }

    public boolean isAccountNonLocked() {
        return true;
    }

    public boolean isCredentialsNonExpired() {
        return true;
    }

    public boolean isEnabled() {
        return true;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o)
            return true;
        if (o == null || getClass() != o.getClass())
            return false;
        User user = (User) o;
        return Objects.equals(userID, user.userID);
    }

    @Override
    public int hashCode() {
        return Objects.hash(userID);
    }
}
